--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,18 @@
 @import url("styles/contato.css");
 @import url("styles/rodapé.css");
 
+
 :root {
-    --cor-de-fundo: #EBECEE;
-    --branco: #cecbcb;
-    --laranja: #a78b86;
-    --azul-degrade: linear-gradient(97.54deg, #330052 35.49%, #7f3289 165.37%);
+    --cor-de-fundo: #e5e6e7;
+    --branco: #FFFFFF;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
-    --azul: #8325b6;
+    --azul: #002F52;
+    --fonte-secundario: "Josefin Sans";
+    --preto: #000000;
+    --cinza: #474646;
+    --cinza-claro: #806060;
 }
 
 body {
