--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,16 @@
 
 
 :root {
-    --cor-de-fundo: #e5e6e7;
-    --branco: #FFFFFF;
-    --laranja: #EB9B00;
+    --cor-de-fundo: #565e6d;
+    --branco: #aca8a8;
+    --laranja: #c1850c;
     --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
-    --azul: #002F52;
+    --azul: #05253d;
     --fonte-secundario: "Josefin Sans";
     --preto: #000000;
     --cinza: #474646;
-    --cinza-claro: #806060;
+    --cinza-claro: #5e5757;
 }
 
 body {
